<?xml version="1.0" encoding="utf-8"?>
<!-- main_activity_actions.xml
     These are the menu selections for the NipperOne action bar.
     Settings, Help, About
      -->
      
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings" 
        android:icon="@drawable/ic_action_settings"/>
    <item 
        android:id="@+id/action_help" 
        android:orderInCategory="102" 
        android:title="@string/action_help"
        android:icon="@drawable/ic_action_help" 
        android:showAsAction="ifRoom|withText"/>
    
    <item android:id="@+id/action_about" 
        android:orderInCategory="105" 
        android:title="@string/action_about" 
        android:icon="@drawable/ic_action_about" 
        android:showAsAction="never" /> 
        
        
    <item android:id="@+id/action_restore_receiver_defaults"
        android:orderInCategory="103" 
        android:title="@string/action_restore_receiver_defaults" 
        android:showAsAction="never" /> 
 
    <item android:id="@+id/action_clearscreen" 
        android:orderInCategory="100" 
        android:title="@string/action_clearscreen" 
        android:showAsAction="ifRoom|withText" /> 
    
</menu>
